
BACKEND
	Added: Dedicated package for remote SQL server
	Added: NAMED_BNAME (named binary name) configuration parameter - Named (Bind9) server impl.
	Changed: Customers have now a full read access to their http logs, including those which were rotated
	Changed: Domain's logs are now mounted in customer's logs folder using bind mount instead of being copied
	Fixed: Due to logs rotation, some httpd logs are never copied into customer's log folders
	Fixed: File /etc/mysql/conf.d/imscp.cnf not loaded when using Percona DB server due to missing /etc/mysql/my.cnf file
	Fixed: POP3 SSL and IMAP SSL services must be disabled when SSL is disabled for the services - Courier server impl.
	Fixed: The .my.cnf file is no longer used and thus, must be removed
	Fixed: Set timezone according TIMEZONE configuration parameter (iMSCP::Bootstrapper::boot())

CONFIGS
	Added: ADM_GROUP configuration parameter
	Added: courier-authdaemon init script - Init script provided by Debian/Ubuntu do not work
	Added: mysql.data configuration file
	Added: percona 5.5/5.6 in Debian Jessie package file
	Added: percona 5.5/5.6 in Ubuntu Vivid Vervet package file
	Added: TIMEZONE configuration parameter
	Removed: TLS cipher suite - Setting TLSProtocol TLSv1 is sufficient to protect against poodle attack (ProFTPD)
	Removed: PHP_TIMEZONE parameter (replaced by global TIMEZONE parameter)

CONTRIB
	Added: Script which allow to test services for poodle vulnerability (poodle.sh)

FRONTEND
	Fixed: Domain limit is not updated when a domain is being deleted (reseller level)
	Fixed: Opcode cache must be cleared when the languages index is rebuilt

INSTALLER
	Added: Progress info for i-MSCP composer packages (Setup dialog)
	Added: timezone item for the reconfigure command line option (Allow to setup global timezone)

YOUTRACK
	Fixed: #IP-0792: Allow customers to see real-time http access and error logs
	Fixed: #IP-1362: Incorrect PHP temporary directory path in subdomain's vhost files - Apache2 ITK server impl.